# JobAnalyzer

./: .env.example  .gitignore  AGENTS.md  README.md  candidate_profile.example.json  llm.py  main.py  pyproject.toml  qcc_config.example.json  requirements.txt  start_job_analysis.bat  start_job_analysis.ps1
analyzers/: __init__.py  _shared.py  basic_info_agent.py  company_agent.py  company_finance_agent.py  company_risk_agent.py  compensation_agent.py  final_evaluation_agent.py  industry_fetcher.py  industry_outlook_agent.py  job_value_agent.py  legal_risk_agent.py  requirement_agent.py  responsibility_agent.py  work_intensity_agent.py
doc/: fit.md  frontend.md
external_data/: __init__.py  company_cache.py  company_resolver.py  enrich.py  mcp_client.py  qcc_client.py  salary_benchmark.py  uscc_lookup.py
external_data/references/: hudson_2025_tech.csv
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/core/mock/: jobs.mock.ts
frontend/src/app/core/models/: job.model.ts
frontend/src/app/core/services/: api.service.ts  favorite-jobs.service.ts
frontend/src/app/features/dashboard/: dashboard.component.html  (+2 more)
frontend/src/app/shared/: score-utils.ts
frontend/src/environments/: environment.prod.ts  environment.ts
pipeline/: __init__.py  company_data.py  company_scrape.py  industry_data.py  job_data.py  llm_runner.py
scraper/: __init__.py  cdp_scraper.py  cleaner.py  job_scraper.py
web/: __init__.py  adapters.py  app.py
(+33 files in other folders)
