[project]
name = "job-analysis"
version = "0.1.0"
description = "Scrape a job posting URL via Chrome DevTools Protocol and analyze it with parallel LLM sub-agents."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.100.0",
    "anthropic>=0.72.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    "websocket-client>=1.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["."]
python_files = ["test_*.py"]
